2005-01-07 Gustaf.Neumann@wu-wien.ac.at
        * code cleanup for nonpos args
        * new methods for Serialzer:
           - Serializer methodSerialize (to serialize methods)
           - Serializer exportMethods (to export methods from the 
             xotcl namespace via ::Serializer all
           - Serializer exportObjects (to export Objects from ::xotcl::*)
        * put Serializer into a namespace (::Serializer is auto-exported)
        * fix for serializer, when xotcl is not imported globally
        * aolserver: support for namespaced objects in xotcl.tcl

2005-01-06 Gustaf.Neumann@wu-wien.ac.at
        * made introspection options for methods with nonpos args
          compatible with tcl
        * adding functionality to allow nonpos args and positional args
          to be specified in the same argument list (still supporting
          the syntax with separate lists)

2005-01-05 Uwe Zdun <uwe.zdun@wu-wien.ac.at>
	* Added support for defaults + non-pos args in info args, 
	  default, instargs, instdefault
        * fixed bug: Check Boolean in non-pos args crashed with 2 args

2004-12-15 Gustaf.Neumann@wu-wien.ac.at
        * fixed crash for empty arguments 
          (thanks to Gerald Stermsek for reporting this bug)

2004-12-02 Gustaf.Neumann@wu-wien.ac.at, Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * release of distribution XOTcl 1.3.4

2004-12-02 Gustaf.Neumann@wu-wien.ac.at
        * changed metadata analyser from recursive to iterative

2004-11-30 <jeffh@activestate.com> 
        * various fixes to improve portability
        
2004-11-27 Gustaf.Neumann@wu-wien.ac.at, Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * release of distribution XOTcl 1.3.3

2004-11-20 Gustaf.Neumann@wu-wien.ac.at
        * fixed [self callinglevel] in nested uplevel loops
          in the presence of filters, extended regression test

2004-11-19 Uwe Zdun <uwe.zdun@wu-wien.ac.at>
        * fixed bug: empty non-pos args, double dash alone.