@@ -1,5 +1,5 @@
 static char cmd[] = 
-"# $Id: predefined.h,v 1.5 2004/07/20 12:57:59 neumann Exp $\n"
+"# $Id: predefined.h,v 1.6 2005/01/10 11:57:35 neumann Exp $\n"
 "::xotcl::Object instproc init args {}\n"
 "::xotcl::Object create ::xotcl::@\n"
 "::xotcl::@ proc unknown args {}\n"
@@ -54,6 +54,11 @@ static char cmd[] =
 "::xotcl::Object instproc hasclass cl {\n"
 "if {[::xotcl::my ismixin $cl]} {return 1}\n"
 "::xotcl::my istype $cl}\n"
+"::xotcl::Class instproc allinstances {} {\n"
+"set set [::xotcl::my info instances]\n"
+"foreach sc [::xotcl::my info subclass] {\n"
+"eval lappend set [$sc allinstances]}\n"
+"return $set}\n"
 "::xotcl::Object proc unsetExitHandler {} {\n"
 "::xotcl::Object proc __exitHandler {} {\n"
 ";}}\n"
@@ -247,7 +252,7 @@ static char cmd[] =
 "close $t\n"
 "cd $old\n"
 "return \"$oc objects, $mc methods\"}\n"
-"xotcl::Object instproc extractConfigureArg {al name {cutTheArg 0}} {\n"
+"::xotcl::Object instproc extractConfigureArg {al name {cutTheArg 0}} {\n"
 "set value \"\"\n"
 "upvar $al argList\n"
 "set largs [llength $argList]\n"
